--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
 	"author": "John Tran",
 	"license": "MIT",
 	"scripts": {
-		"start": "npm-run-all -p dev:start dev:wds",
+		"dev": "npm-run-all -p dev:start dev:wds",
 		"dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
 		"dev:wds": "webpack-dev-server --progress",
+		"prod": "yarn prod:build && yarn prod:start",
 		"prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
 		"prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
 		"prod:stop": "pm2 delete server",
 		"lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
 		"lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint -- --fix",
-		"test": "yarn lint && flow && jest --coverage",
-		"precommit": "yarn test",
-		"prepush": "yarn test && yarn prod:build"
+		"test": "yarn lint && flow && jest --coverage"
 	},
 	"browserslist": [
 		"> 1%"
@@ -24,36 +23,35 @@
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
-		"babel-eslint": "^7.2.3",
-		"babel-jest": "^20.0.3",
+		"babel-eslint": "^8.0.3",
+		"babel-jest": "^21.2.0",
 		"babel-loader": "^7.0.0",
-		"babel-plugin-flow-react-proptypes": "^3.2.1",
+		"babel-plugin-flow-react-proptypes": "^11.0.0",
 		"babel-preset-env": "^1.5.2",
 		"babel-preset-flow": "^6.23.0",
 		"babel-preset-react": "^6.24.1",
 		"cross-env": "^5.0.1",
-		"eslint": "^3.19.0",
-		"eslint-config-airbnb": "^15.0.1",
-		"eslint-plugin-compat": "^1.0.3",
+		"eslint": "^4.13.1",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-compat": "^2.1.0",
 		"eslint-plugin-flowtype": "^2.34.0",
 		"eslint-plugin-import": "^2.2.0",
-		"eslint-plugin-jsx-a11y": "^5.0.1",
+		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.0.1",
-		"flow-bin": "^0.47.0",
-		"husky": "^0.13.4",
-		"jest": "^20.0.4",
+		"flow-bin": "^0.61.0",
+		"jest": "^21.2.1",
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
 		"pm2": "^2.5.0",
 		"postcss": "^6.0.4",
-		"postcss-cssnext": "^2.11.0",
+		"postcss-cssnext": "^3.0.2",
 		"postcss-loader": "^2.0.6",
 		"precss": "^2.0.0",
 		"rimraf": "^2.6.1",
-		"style-loader": "^0.18.2",
+		"style-loader": "^0.19.0",
 		"stylefmt": "^6.0.0",
-		"stylelint": "^7.12.0",
-		"webpack": "^2.6.1",
+		"stylelint": "^8.3.1",
+		"webpack": "^3.10.0",
 		"webpack-dev-server": "^2.4.5"
 	},
 	"dependencies": {
@@ -61,10 +59,10 @@
 		"compression": "^1.6.2",
 		"express": "^4.15.3",
 		"lodash": "^4.17.4",
-		"react": "^15.5.4",
-		"react-dom": "^15.5.4",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
 		"react-helmet": "^5.1.3",
-		"react-hot-loader": "next",
+		"react-hot-loader": "^3.0.0",
 		"react-router": "^4.1.1",
 		"react-router-dom": "^4.1.1"
 	}
