Added esnext. Fixed css config. Ran prettier

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
 		"prod:stop": "pm2 delete server",
 		"lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
-		"lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint -- --fix",
+		"lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
 		"test": "yarn lint && flow && jest --coverage"
 	},
 	"browserslist": [
@@ -56,6 +56,7 @@
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.23.0",
+		"babel-preset-stage-0": "^6.24.1",
 		"compression": "^1.6.2",
 		"express": "^4.15.3",
 		"lodash": "^4.17.4",
