--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,10 @@
   "presets": [
     "env",
     "flow",
-    "react"
+    "react",
+		"stage-0"
   ],
   "plugins": [
-    "flow-react-proptypes"
+		"flow-react-proptypes"
   ]
 }
