--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
 		"babel-eslint": "^8.0.3",
-		"babel-jest": "^21.2.0",
+		"babel-jest": "^22.4.1",
 		"babel-loader": "^7.0.0",
-		"babel-plugin-flow-react-proptypes": "^11.0.0",
+		"babel-plugin-flow-react-proptypes": "^20.1.0",
 		"babel-preset-env": "^1.5.2",
 		"babel-preset-flow": "^6.23.0",
 		"babel-preset-react": "^6.24.1",
@@ -38,21 +38,22 @@
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.0.1",
-		"flow-bin": "^0.61.0",
-		"jest": "^21.2.1",
+		"flow-bin": "^0.67.1",
+		"jest": "^22.4.2",
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
 		"pm2": "^2.5.0",
 		"postcss": "^6.0.4",
 		"postcss-cssnext": "^3.0.2",
 		"postcss-loader": "^2.0.6",
-		"precss": "^2.0.0",
+		"precss": "^3.1.2",
 		"rimraf": "^2.6.1",
-		"style-loader": "^0.19.0",
+		"style-loader": "^0.20.2",
 		"stylefmt": "^6.0.0",
-		"stylelint": "^8.3.1",
-		"webpack": "^3.10.0",
-		"webpack-dev-server": "^2.4.5"
+		"stylelint": "^9.1.1",
+		"webpack": "^4.1.1",
+		"webpack-cli": "^2.0.10",
+		"webpack-dev-server": "^3.1.0"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.23.0",
@@ -63,7 +64,7 @@
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-helmet": "^5.1.3",
-		"react-hot-loader": "^3.0.0",
+		"react-hot-loader": "^4.0.0",
 		"react-router": "^4.1.1",
 		"react-router-dom": "^4.1.1"
 	}
