--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,10 @@
     "env",
     "flow",
     "react",
-		"stage-0"
+		"stage-2"
   ],
   "plugins": [
-		"flow-react-proptypes"
+    "flow-react-proptypes",
+    "react-hot-loader/babel" 
   ]
 }
