--- a/package.json
+++ b/package.json
@@ -1,71 +1,71 @@
 {
-	"name": "js-boilerplate",
-	"version": "1.0.0",
-	"description": "Personal boilerplate",
-	"main": "index.js",
-	"author": "John Tran",
-	"license": "MIT",
-	"scripts": {
-		"dev": "npm-run-all -p dev:start dev:wds",
-		"dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
-		"dev:wds": "webpack-dev-server --progress",
-		"prod": "yarn prod:build && yarn prod:start",
-		"prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
-		"prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
-		"prod:stop": "pm2 delete server",
-		"lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
-		"lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
-		"test": "yarn lint && flow && jest --coverage"
-	},
-	"browserslist": [
-		"> 1%"
-	],
-	"devDependencies": {
-		"babel-cli": "^6.24.1",
-		"babel-core": "^6.25.0",
-		"babel-eslint": "^8.0.3",
-		"babel-jest": "^22.4.1",
-		"babel-loader": "^7.0.0",
-		"babel-plugin-flow-react-proptypes": "^20.1.0",
-		"babel-preset-env": "^1.5.2",
-		"babel-preset-flow": "^6.23.0",
-		"babel-preset-react": "^6.24.1",
-		"cross-env": "^5.0.1",
-		"eslint": "^4.13.1",
-		"eslint-config-airbnb": "^16.1.0",
-		"eslint-plugin-compat": "^2.1.0",
-		"eslint-plugin-flowtype": "^2.34.0",
-		"eslint-plugin-import": "^2.2.0",
-		"eslint-plugin-jsx-a11y": "^6.0.2",
-		"eslint-plugin-react": "^7.0.1",
-		"flow-bin": "^0.67.1",
-		"jest": "^22.4.2",
-		"nodemon": "^1.11.0",
-		"npm-run-all": "^4.0.2",
-		"pm2": "^2.5.0",
-		"postcss": "^6.0.4",
-		"postcss-cssnext": "^3.0.2",
-		"postcss-loader": "^2.0.6",
-		"precss": "^3.1.2",
-		"rimraf": "^2.6.1",
-		"style-loader": "^0.20.2",
-		"stylefmt": "^6.0.0",
-		"stylelint": "^9.1.1",
-		"webpack": "^4.1.1",
-		"webpack-cli": "^2.0.10",
-		"webpack-dev-server": "^3.1.0"
-	},
-	"dependencies": {
-		"babel-polyfill": "^6.23.0",
-		"babel-preset-stage-0": "^6.24.1",
-		"compression": "^1.6.2",
-		"express": "^4.15.3",
-		"lodash": "^4.17.4",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-helmet": "^5.1.3",
-		"react-hot-loader": "^4.0.0",
-		"react-router": "^4.1.1",
-		"react-router-dom": "^4.1.1"
-	}
+  "name": "js-boilerplate",
+  "version": "1.0.0",
+  "description": "Personal boilerplate",
+  "main": "index.js",
+  "author": "John Tran",
+  "license": "MIT",
+  "scripts": {
+    "dev": "npm-run-all -p dev:start dev:wds",
+    "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
+    "dev:wds": "cross-env NODE_ENV=development webpack-dev-server  --progress --mode development --config webpack.config.dev.babel.js",
+    "prod": "yarn prod:build && yarn prod:start",
+    "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress --mode production --config webpack.config.prod.babel.js",
+    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
+    "prod:stop": "pm2 delete server",
+    "lint": "eslint src webpack.config.development.babel.js --ext .js,.jsx",
+    "lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
+    "test": "jest --coverage"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.3",
+    "babel-jest": "^22.4.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-flow-react-proptypes": "^20.1.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.1",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-compat": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.67.1",
+    "jest": "^22.4.2",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
+    "pm2": "^2.5.0",
+    "postcss": "^6.0.4",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.6",
+    "precss": "^3.1.2",
+    "prettier": "^1.11.1",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.20.2",
+    "stylefmt": "^6.0.0",
+    "stylelint": "^9.1.1",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "compression": "^1.6.2",
+    "express": "^4.15.3",
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-helmet": "^5.1.3",
+    "react-hot-loader": "^4.0.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
+  }
 }
