--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
     "prod:stop": "pm2 delete server",
     "lint": "eslint src webpack.config.development.babel.js --ext .js,.jsx",
     "lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
+    "reinstall": "rm -rf node_modules/ && yarn install",
     "test": "jest --coverage"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^8.0.3",
-    "babel-jest": "^22.4.1",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.0.0",
-    "babel-plugin-flow-react-proptypes": "^20.1.0",
+    "babel-plugin-flow-react-proptypes": "^24.0.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.1",
-    "eslint": "^4.13.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.67.1",
+    "flow-bin": "^0.70.0",
     "jest": "^22.4.2",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
@@ -46,16 +47,16 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^3.1.2",
-    "prettier": "^1.11.1",
+    "prettier": "^1.12.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.20.2",
     "stylefmt": "^6.0.0",
-    "stylelint": "^9.1.1",
-    "uglifyjs-webpack-plugin": "^1.2.3",
-    "webpack": "^4.1.1",
+    "stylelint": "^9.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
