Fixed webpack config

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
 		}],
 		"comma-dangle": ["error", "never"],
 		"no-tabs": 0,
-		"react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}]
+    "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
+    "no-unneeded-ternary": 0
 	},
 	"settings": {
 		"polyfills": ["fetch"]
