--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "pm2": "^2.10.2",
     "postcss": "^6.0.21",
     "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.1.4",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.1",
