--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 app/node_modules
+package-lock.json
 
 # OSX
 .DS_Store
