--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": [
-    "env",
-    "flow",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-flow"
   ],
   "plugins": [
     "flow-react-proptypes",
-    "react-hot-loader/babel" 
+    "react-hot-loader/babel"
   ]
 }
