--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress --mode production --config webpack.config.prod.babel.js",
     "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
     "prod:stop": "pm2 delete server",
-    "lint": "eslint src webpack.config.development.babel.js --ext .js,.jsx",
+    "lint": "eslint src webpack.config.dev.babel.js --ext .js,.jsx",
     "lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
     "reinstall": "rm -rf node_modules/ && yarn install",
     "test": "jest --coverage"
@@ -32,15 +32,15 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "cross-env": "^5.1.4",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.107.0",
-    "jest": "^22.4.3",
+    "jest": "^24.9.0",
     "nodemon": "^1.17.3",
     "npm-run-all": "^4.0.2",
     "pm2": "^2.10.2",
@@ -53,7 +53,7 @@
     "rimraf": "^2.6.1",
     "style-loader": "^0.21.0",
     "stylefmt": "^6.0.0",
-    "stylelint": "^9.2.0",
+    "stylelint": "^11.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^3.5.0",
