--- a/package.json
+++ b/package.json
@@ -14,54 +14,54 @@
     "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress --mode production --config webpack.config.prod.babel.js",
     "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
     "prod:stop": "pm2 delete server",
-    "lint": "eslint src webpack.config.development.babel.js --ext .js,.jsx",
+    "lint": "eslint src webpack.config.dev.babel.js --ext .js,.jsx",
     "lint-fix": "prettier --single-quote --write \"{,!(dist|flow-typed|lib)/**}/*.{js,jsx}\" && yarn lint --fix",
     "reinstall": "rm -rf node_modules/ && yarn install",
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-flow-react-proptypes": "^24.0.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-flow-react-proptypes": "^25.1.0",
     "cross-env": "^5.1.4",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.70.0",
-    "jest": "^22.4.3",
+    "flow-bin": "^0.107.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.17.3",
     "npm-run-all": "^4.0.2",
-    "pm2": "^2.10.2",
+    "pm2": "^3.5.1",
     "postcss": "^6.0.21",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
     "prettier": "^1.12.1",
-    "rimraf": "^2.6.1",
+    "rimraf": "^3.0.0",
     "style-loader": "^0.21.0",
     "stylefmt": "^6.0.0",
-    "stylelint": "^9.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "stylelint": "^11.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.15",
+    "webpack-bundle-analyzer": "^3.5.0",
+    "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.16.3",
     "lodash": "^4.17.4",
