--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "compression": "^1.6.2",
     "express": "^4.16.3",
     "lodash": "^4.17.4",
     "react": "^16.3.2",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^4.1.1",
