--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "cross-env": "^5.1.4",
+    "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-compat": "^3.3.0",
@@ -44,14 +45,14 @@
     "nodemon": "^1.17.3",
     "npm-run-all": "^4.0.2",
     "pm2": "^3.5.1",
-    "postcss": "^6.0.21",
+    "postcss": "^7.0.18",
     "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.5",
-    "precss": "^3.1.2",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "prettier": "^1.12.1",
     "rimraf": "^3.0.0",
-    "style-loader": "^0.21.0",
+    "style-loader": "^1.0.0",
     "stylefmt": "^6.0.0",
     "stylelint": "^11.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
